--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="input-group f-class">
                 <div>
                     <label for="">First Class ($150)</label>
-                    <input id="firstClassTicket-quantity" class="inp-style inp-width" type="number" name="">
+                    <input id="firstClassTicket-quantity" class="inp-style inp-width" type="number" name="" value="0">
                 </div>
                 <div class="plus-minus-btn">
                     <p><button onclick=" handleEconomyTicket('firstClassTicket',true)" type="button" class="btn btn-primary">+</button> <button onclick=" handleEconomyTicket('firstClassTicket', false)" type="button"
@@ -71,7 +71,7 @@
             <div class="input-group f-class">
                 <div>
                     <label for="">Economy ($100)</label>
-                    <input id="ticket-quantity" class="inp-style inp-width" type="number" name="">
+                    <input id="ticket-quantity" class="inp-style inp-width" type="number" name="" value="0">
                 </div>
                 <div class="plus-minus-btn">
                     <p> <button onclick="handleEconomyTicket('ticket', true)" type="button" class="btn btn-primary">+</button> <button
@@ -84,7 +84,7 @@
                         <p>Subtotal</p>
                     </div>
                     <div class="right">
-                        <p id="ticket-total">$500</p>
+                        <p id="ticket-total">$00</p>
                     </div>
                 </div>
 
@@ -93,7 +93,7 @@
                         <p >Charge 10% VAT</p>
                     </div>
                     <div class="right">
-                        <p id="tax-amount">$50</p>
+                        <p id="tax-amount">$0</p>
                     </div>
                 </div>
                 <hr>
@@ -102,7 +102,7 @@
                         <h4>Total</h4>
                     </div>
                     <div class="right">
-                        <p id="sum-total">$550</p>
+                        <p id="sum-total">$00</p>
                     </div>
                 </div>
             </div>
@@ -162,7 +162,7 @@
         }
         // book now event listener
         const bookNow = document.getElementById('book-now').addEventListener('click', function(){
-            alert("Congratulation, Your Honeymoon trip is booked!")
+            alert("Congratulation, Your trip is booked!")
         })
     </script>
 </body>
